--- a/src/pages/landing/Landing.css
+++ b/src/pages/landing/Landing.css
@@ -24,8 +24,8 @@ h1{
     align-items: center;
     font-family: 'Raleway', sans-serif;
     font-size: 25px;
-    font-weight: 500;
-    background: #eff8ff;
+    font-weight: 700;
+    background: none;
     width: 100%;
     height: 100%;
     position:absolute;
