icons with fade

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -36,10 +36,11 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 }
 .description{
    
-width: 90%;
+width: 100;
 margin-bottom: 0;
-
-
+display: flex;
+flex-direction: column;
+justify-content: space-around;
 
 }
 .description h3{
@@ -47,7 +48,31 @@ margin-bottom: 0;
     line-height: 1.5em;
     font-weight: 300;
     font-size: 13px;
+
+}
+.clarinet a{
+    text-decoration: none;
+    color: inherit;
+}
+.clarinet:hover{
+    color: #bce6eb;
+    font-weight: 700;
+    transition: ease 0.3s;
+}
+.code-group{
+    display: flex;
+    width: 100%;
+}
+.code{
     
+    width: 20%;
    
     
+}
+.code img{
+    width: 70%;
+}
+.code p{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
