--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,5 +1,5 @@
 .contact-container{
-    height: 30vh;
+    height: 40vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -12,6 +12,7 @@
 .contact-container h2{
     margin-top: 0 !important;
     font-family: 'Raleway', sans-serif;
+    font-weight: 500;
 }
 .contact-methods{
     display: flex;
@@ -27,6 +28,12 @@
 }
 .contact h3{
     font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+
+}
+.contact-container h4{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
 
 }
 a{
