tested mediq queries

--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -40,3 +40,19 @@ a{
     text-decoration: none !important;
 
 }
+
+@media only screen and (min-width: 1024px)  {
+
+    .contact-container h2{
+        font-size: 35px;
+    }
+    .contact-container h4{
+        font-size: 30px;
+    }
+    .contact img{
+        width: 20%;
+    }
+    .contact h3{
+        font-size: 20px;
+    }
+}
