--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -16,6 +16,7 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
     font-weight: 400;
     font-size: 17px;
 }
+
 .personal{
     margin-top: 5%;
     width: 80%;
@@ -34,31 +35,36 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
     border-radius: 20px;
     
 }
-.description{
-   
-width: 100;
-margin-bottom: 0;
-display: flex;
-flex-direction: column;
-justify-content: space-around;
 
+.desc-text{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-.description h3{
+.desc-text h3{
     font-family: 'Raleway', sans-serif;
     line-height: 1.5em;
     font-weight: 300;
     font-size: 13px;
-
+    width: 80%;
+    
 }
+
+
 .clarinet a{
     text-decoration: none;
     color: inherit;
 }
 .clarinet:hover{
-    color: #bce6eb;
-    font-weight: 700;
-    transition: ease 0.3s;
+     color: #bce6eb; 
+     font-weight: 900;
+    transition: ease 0.5s; 
+   
+
 }
+
 .code-group{
     display: flex;
     width: 100%;
@@ -70,9 +76,49 @@ justify-content: space-around;
     
 }
 .code img{
-    width: 70%;
+    width: 50%;
 }
 .code p{
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
 }
+
+@media only screen and (min-width: 680px){
+    .desc-text h3{
+        width: 100%;
+    }
+    .desc-text{
+        width: 100%;
+    }
+    .desc-text h3{
+        font-size: 20px;
+        
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+ .about-container h2{
+     font-size: 30px;
+ }
+ 
+ 
+  
+ .code img{
+     width: 80px;
+ }
+
+}
+
+
+/* @media only screen and (min-width: 1024px)  {
+   
+    .desc-text h3{
+        font-size: 20px;
+    }
+    
+    .headshot{
+        height: 350px;
+    }
+    
+} */
