--- a/src/pages/landing/Landing.css
+++ b/src/pages/landing/Landing.css
@@ -43,3 +43,13 @@ h1{
 h1{
     margin-top: 0;
 }
+
+@media only screen and (min-width: 1024px) and (min-height: 1366px){
+    .container h1{
+        font-size: 48px;
+    
+    }
+    .container:after{
+        font-size: 48px;
+    }
+}
