--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 10%;
     background: rgb(212,247,255);
 background: linear-gradient(353deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 57%);
 
@@ -60,16 +60,20 @@ background: linear-gradient(353deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 }
 projects-container h2 {font-weight: 500;}
 
-@media only screen and (min-width: 768px) and (min-height: 1024px) {
+@media only screen and (min-width: 768px)  {
 
     .project-header{
         font-size: 35px;
         font-weight: 500;
     }   
+    
 }
+
+
 @media only screen and (min-width: 1024px)and (min-height: 1366px){
     
     .project-list{
+        
         height: 70%;
         width: 80%;
     }
@@ -81,8 +85,9 @@ projects-container h2 {font-weight: 500;}
         font-size: 30px;
     }
 }@media only screen and (min-width: 1200px){
-    .projects-container h2{
-        font-size: 30px;
-       
+  
+
+    .project-list {
+        flex-direction: row;
     }
 }
