--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,6 +1,5 @@
 .about-container{
-    height: 100vh;
-    width: 100vw;
+  
     margin-top: 0;
     margin-bottom:0;
     display: flex;
@@ -68,6 +67,7 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 .code-group{
     display: flex;
     width: 100%;
+    margin-top: 5%;
 }
 .code{
     
