--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -1,10 +1,9 @@
 .projects-container{
-    width: 100vw;
-    height: 100vh;
+   
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10%;
+    padding: 10%;
     background: rgb(212,247,255);
 background: linear-gradient(353deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 57%);
 
@@ -29,6 +28,8 @@ background: linear-gradient(353deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
     background-color: white;
     border-radius: 15px;
     padding: 20px;
+    margin: 5%;
+    
     position: relative;
     box-shadow:
   0 2.8px 2.2px rgba(0, 0, 0, 0.034),
@@ -60,7 +61,7 @@ background: linear-gradient(353deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 }
 projects-container h2 {font-weight: 500;}
 
-@media only screen and (min-width: 768px)  {
+@media only screen and (min-width: 768px) and (min-height: 1024px) {
 
     .project-header{
         font-size: 35px;
@@ -85,7 +86,10 @@ projects-container h2 {font-weight: 500;}
         font-size: 30px;
     }
 }@media only screen and (min-width: 1200px){
-  
+    .projects-container h2{
+        font-size: 30px;
+       
+    }
 
     .project-list {
         flex-direction: row;
