--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -12,8 +12,9 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 .about-container h2{
     margin-bottom: 0;
     font-family: 'Raleway', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 17px;
+    color: #393e46
 }
 
 .personal{
@@ -25,8 +26,7 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
     align-items: center;
     height: 90%;
     
-    /* display: flex; */
-    /* justify-content: space-around */
+    
 }
 .headshot{
     height: 300px;
@@ -80,7 +80,7 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 }
 .code p{
     font-family: 'Raleway', sans-serif;
-    font-weight: 300;
+    font-weight: 600;
 }
 
 @media only screen and (min-width: 680px){
@@ -111,14 +111,4 @@ background: linear-gradient(180deg, rgba(212,247,255,1) 9%, rgba(255,232,206,1) 
 }
 
 
-/* @media only screen and (min-width: 1024px)  {
-   
-    .desc-text h3{
-        font-size: 20px;
-    }
-    
-    .headshot{
-        height: 350px;
-    }
-    
-} */
+
