--- a/src/pages/landing/Landing.css
+++ b/src/pages/landing/Landing.css
@@ -1,7 +1,10 @@
 .container{
     height: 100vh;
-    width: 100vw;
+    
+    
    display: flex;
+   flex-direction: column;
+   align-items: center;
    justify-content: center;
 
     background:url('./assets/water-big.jpg');
@@ -12,44 +15,70 @@
     opacity: 0.8;
 }
 h1{
-    margin-top: 14% !important;
+   
     font-family: 'Raleway', sans-serif;
     font-weight: 300 !important;
     
 }
-.container::after{
-    content:"I'm a Software Engineer";
+.layers{
+    position: relative;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    font-family: 'Raleway', sans-serif;
-    font-size: 25px;
-    font-weight: 700;
-    background: none;
-    width: 100%;
-    height: 100%;
-    position:absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 1.2s ease;
-
+    
+    width: 90%;
+    height: 90%;
+   
 }
-.container:hover::after{
+.base{
+    margin-top: 14%;
+}
+
+.overlay{
+position: absolute;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-evenly;
+height: 100%;
+width: 100%;
+top: 0;
+opacity: 0;
+transition: opacity 1.5s ease;
+}
+.overlay h2{
+margin-top: 15%;
+font-family: 'Raleway', sans-serif;
+    font-weight: 300 !important;
+}
+.overlay:hover{
+    opacity: 1;
+}
+.container img{
+    
+    width: 8%;
+   
     opacity: 0.5;
 }
-
-
-h1{
-    margin-top: 0;
+.container img:hover{
+    cursor: pointer;
 }
 
-@media only screen and (min-width: 1024px) and (min-height: 1366px){
+
+@media only screen and (min-width: 768px){
+
+    .overlay img{
+        width: 5%;
+    }
+}
+
+@media only screen and (min-width: 1224px) {
     .container h1{
-        font-size: 48px;
+        font-size: 42px;
     
     }
-    .container:after{
-        font-size: 48px;
-    }
+   .overlay h2{
+       margin-top: 18%;
+       font-size: 42px;
+   }
 }
